issue#85-more:vertical align buttons in top nav

--- a/src/less/webmakerLogin.less
+++ b/src/less/webmakerLogin.less
@@ -77,7 +77,7 @@
   font-weight: 400;
   text-align: center;
   a, button {
-    padding: 5px 20px 0;
+    padding: 0px 20px;
     font-size: 13px;
     height: 100%;
     min-width: 40px;
